# fourier-series-approximation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
julia/: Main.jl  Manifest.toml
python/: main.py  pyproject.toml
src/: index.html
src/simulation/: fourier.jl  simulation.py
src/ui/: app.js  style.css  sw.js
